tests/miniJava/neg/000193_mutation.MiniJava
class java { public static public void Main ( String [ ] java ) { { } } }
